--- a/notebooks/game_vKarla_outcome_prediction.ipynb
+++ b/notebooks/game_vKarla_outcome_prediction.ipynb
@@ -719,9 +719,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Generate combinations of 3 connectivity measures\n",
+        "\n",
+        "load_data = load_data_ori[load_data_ori['Strategy'] == \"mm\"]\n",
+        "\n",
+        "results = []\n",
+        "\n",
+        "for cm_combination in itertools.combinations(conn_measures, 4):\n",
+        "    combination_str = ', '.join(cm_combination)\n",
+        "    roc_auc, sens, spec = compute_metrics_for_combination(cm_combination, load_data)\n",
+        "\n",
+        "    if roc_auc != None:\n",
+        "      # print(f'The AUC is: {roc_auc}, Sensitivity: {sens}, Specificity: {spec}')\n",
+        "\n",
+        "      # Append the results to the list\n",
+        "      results.append({\n",
+        "          'CM': combination_str,\n",
+        "          'AUC': roc_auc,\n",
+        "          'Sensitivity': sens,\n",
+        "          'Specificity': spec\n",
+        "      })\n",
+        "\n",
+        "      # Plot the ROC curve\n",
+        "      combined_scores = []\n",
+        "      actual_labels = None\n",
+        "      for cm in cm_combination:\n",
+        "          data = load_data[load_data['CM'] == cm]\n",
+        "          if actual_labels is None:\n",
+        "              actual_labels = data['Outcome'].values\n",
+        "          combined_scores.append(data['Mean_overlap_ratio'].values)\n",
+        "      avg_scores = np.mean(combined_scores, axis=0)\n",
+        "      fpr, tpr, _ = roc_curve(actual_labels, avg_scores)\n",
+        "\n",
+        "      if roc_auc > 0.96:\n",
+        "\n",
+        "        cm_str = substitute_bands(substitute_cm(combination_str))\n",
+        "\n",
+        "        plt.figure(figsize=(3,3))\n",
+        "        plt.plot(fpr, tpr, color='darkorange', lw=2, label=f'ROC-AUC = {roc_auc:0.2f}')\n",
+        "        plt.plot([0, 1], [0, 1], color='navy', lw=2, linestyle='--')\n",
+        "        plt.xlim([0.0, 1.0])\n",
+        "        plt.ylim([0.0, 1.05])\n",
+        "        plt.xlabel('1-Specificity (FPR)', size=12)\n",
+        "        plt.ylabel('Sensitivity (TPR)', size=12)\n",
+        "        plt.title(f'Connectivity: {cm_str}')\n",
+        "        plt.legend(loc=\"lower right\")\n",
+        "        plt.show()\n",
+        "        plt.close()\n",
+        "\n",
+        "# Convert the results to a DataFrame\n",
+        "results_df = pd.DataFrame(results)\n",
+        "\n",
+        "# Save the results to an Excel file\n",
+        "results_df.to_excel(project_folder + \"3cm_rocauc_results.xlsx\", index=False)"
+      ],
       "metadata": {
         "id": "aPmqqO2L8skv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gDefzG8CE3Eg"
       },
       "execution_count": null,
       "outputs": []
